# mcp-lent-2026

./: .gitignore  LICENSE  README.md
budget-tracker-mcp/: README.md  pyproject.toml
budget-tracker-mcp/tests/: test_server.py
budget_tracker_mcp/src/budget_tracker_mcp/: server.py
demo-mcp/: pyproject.toml
demo-mcp/src/demo_mcp/: server_template.py
demo_mcp/: README.md
demo_mcp/src/demo_mcp/: server.py
docs/plans/: 2026-02-20-spotify-mcp-design.md  2026-02-20-spotify-mcp.md  2026-02-20-weather-mcp-design.md  2026-02-20-weather-mcp.md  2026-02-21-budget-tracker-mcp-design.md  2026-02-21-budget-tracker-mcp.md  2026-02-21-task-manager-mcp-design.md  2026-02-21-task-manager-mcp.md
spotify-mcp/: README.md
spotify-mcp/tests/: test_server.py
spotify_mcp/: pyproject.toml
spotify_mcp/src/spotify_mcp/: auth.py  server.py
spotify_mcp/tests/: test_auth.py
task-manager-mcp/: pyproject.toml
task-manager-mcp/tests/: test_server.py
task_manager_mcp/: README.md  pyproject.toml
task_manager_mcp/src/task_manager_mcp/: server.py
weather-mcp/: pyproject.toml
weather-mcp/src/weather_mcp/: server.py
weather_mcp/: README.md  pyproject.toml
weather_mcp/tests/: test_server.py
