[project]
name = "budget-tracker-mcp"
version = "0.1.0"
description = "An MCP server for tracking expenses and budgets."
readme = "README.md"
authors = [
    { name = "zihao", email = "31238371+sileneer@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
budget-tracker-mcp = "budget_tracker_mcp:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
