[project]
name = "weather-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zihao", email = "31238371+sileneer@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
]

[project.scripts]
weather-mcp = "weather_mcp:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
